--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "@antv/g2plot": "^2.4.31",
-    "@formkit/auto-animate": "1.0.0-beta.3",
+    "@formkit/auto-animate": "0.8.0",
     "@opd/g2plot-vue": "^3.6.7",
     "@types/nprogress": "^0.2.0",
-    "@vueuse/core": "^9.13.0",
-    "ant-design-vue": "^4.0.2",
-    "axios": "^0.27.2",
+    "@unocss/reset": "^0.56.1",
+    "@vueuse/core": "^10.4.1",
+    "ant-design-vue": "^4.0.3",
+    "axios": "^1.5.0",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
@@ -27,8 +28,8 @@
     "qs": "^6.11.2",
     "remixicon": "^3.5.0",
     "vue": "^3.3.4",
-    "vue-i18n": "^9.3.0",
-    "vue-router": "^4.2.4"
+    "vue-i18n": "^9.4.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
@@ -37,26 +38,27 @@
     "@types/mockjs": "^1.0.7",
     "@types/qrcode": "^1.5.2",
     "@types/qs": "^6.9.8",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "@unocss/preset-rem-to-px": "^0.56.1",
+    "@unocss/preset-uno": "^0.56.1",
+    "@unocss/transformer-directives": "^0.56.1",
+    "@unocss/transformer-variant-group": "^0.56.1",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "mockjs": "^1.1.0",
-    "postcss": "^8.4.29",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5",
-    "unplugin-vue-components": "^0.22.12",
-    "unplugin-vue-macros": "^0.12.1",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
+    "unocss": "^0.56.1",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vite-plugin-dynamic-import": "^1.5.0",
-    "vite-plugin-mock": "^2.9.8",
+    "vite-plugin-mock": "^3.0.0",
     "vite-plugin-vue-type-imports": "^0.2.5",
-    "vue-tsc": "^1.8.10"
+    "vue-tsc": "^1.8.13"
   }
 }
