refator: 重构部分代码

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
-    "types": ["unplugin-vue-macros/macros-global"]
+    "types": []
   },
   "include": ["vite.config.ts", "build/**/*.ts"]
 }
