--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "@opd/g2plot-vue": "^3.6.7",
     "@types/nprogress": "^0.2.0",
     "@unocss/reset": "^0.56.1",
-    "@vueuse/core": "^10.4.1",
+    "@vueuse/core": "^10.5.0",
     "ant-design-vue": "^4.0.3",
     "axios": "^1.5.0",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.7",
     "qrcode": "^1.5.3",
     "qs": "^6.11.2",
     "remixicon": "^3.5.0",
-    "vue": "^3.3.4",
+    "vue": "^3.3.6",
     "vue-i18n": "^9.4.1",
     "vue-router": "^4.2.5"
   },
@@ -55,10 +56,10 @@
     "typescript": "^5.2.2",
     "unocss": "^0.56.1",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.9",
+    "vite": "^4.5.0",
     "vite-plugin-dynamic-import": "^1.5.0",
     "vite-plugin-mock": "^3.0.0",
     "vite-plugin-vue-type-imports": "^0.2.5",
-    "vue-tsc": "^1.8.13"
+    "vue-tsc": "^1.8.19"
   }
 }
