--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -17,7 +18,7 @@
       "/@/*": ["src/*"],
       "/#/*": ["types/*"]
     },
-    "types": ["unplugin-vue-macros/macros-global", "vite/client"]
+    "types": ["vite/client"]
   },
   "include": [
     "src/**/*.ts",
