--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@types/nprogress": "^0.2.0",
     "@unocss/reset": "^0.56.1",
     "@vueuse/core": "^10.5.0",
-    "ant-design-vue": "^4.0.3",
+    "ant-design-vue": "^4.0.6",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
